prueba nuevo commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="main__header">
       <img
-        src="../img/DLVRY.svg"
+        src="./img/dlvry.svg"
         alt="logo delivery"
         width="120px"
         height="80px"
