--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <div class="whatsapp">
       <img
-        src="../img/whatsapp-icon.svg"
+        src="./img/whatsapp-icon.svg"
         alt="atencion por whatsapp"
         width="90px"
         height="90px"
@@ -54,7 +54,7 @@
         </div>
         <div class="main__principal__img">
           <img
-            src="../img/delivery-truck.svg"
+            src="./img/delivery-truck.svg"
             alt="delivery truck illutration"
           />
         </div>
@@ -65,7 +65,7 @@
       <div class="abouy__us__container">
         <div class="about__us__img">
           <img
-            src="../img/delivery-client.svg"
+            src="./img/delivery-client.svg"
             alt="delivery client illustration"
           />
         </div>
@@ -91,7 +91,7 @@
       </div>
       <article class="our__services__card">
         <p class="our__services__card__title">Payment Done</p>
-        <img src="../img/payment-illustration.svg" alt="payment done" />
+        <img src="./img/payment-illustration.svg" alt="payment done" />
         <p class="our__services__paragraph">
           Pay with a Visa or PayPal card and without much ado.
         </p>
@@ -99,7 +99,7 @@
       </article>
       <article class="our__services__card">
         <p class="our__services__card__title">Find your product</p>
-        <img src="../img/your-product.svg" alt="your product" />
+        <img src="./img/your-product.svg" alt="your product" />
         <p class="our__services__paragraph">
           We offer sale of products through the internet
         </p>
@@ -107,7 +107,7 @@
       </article>
       <article class="our__services__card">
         <p class="our__services__card__title">Producto Received</p>
-        <img src="../img/product-received.svg" alt="product received" />
+        <img src="./img/product-received.svg" alt="product received" />
         <p class="our__services__paragraph">
           In our app you can see the delay time of your order.
         </p>
@@ -116,18 +116,18 @@
     </section>
     <!-- fin seccion nuestros servicios -->
     <div class="download__app">
-      <img src="../img/your-delivery-app.svg" alt="delivery app illustration" />
+      <img src="./img/your-delivery-app.svg" alt="delivery app illustration" />
       <p class="download__app__title">Watch Your Delivery At Any Time</p>
       <p class="download__app__paragraph">
         With our app you can view the route of your order, from our local
         headquaters to the place where you are. Look for the app now!
       </p>
       <div class="download__app__button">
-        <img src="../img/google-icon.svg" alt="descargar en google play" />
+        <img src="./img/google-icon.svg" alt="descargar en google play" />
         <p>Google Play</p>
       </div>
       <div class="download__app__button">
-        <img src="../img/ios-icon.svg" alt="descargar en app store" />
+        <img src="./img/ios-icon.svg" alt="descargar en app store" />
         <p>App Store</p>
       </div>
     </div>
@@ -167,7 +167,7 @@
       <div>
         <a href="#"> <img src="../img/fb-icon.svg" alt="facebook icon" /></a>
         <a href="#">
-          <img src="../img/twitter-icon.svg" alt="twitter icon"
+          <img src="./img/twitter-icon.svg" alt="twitter icon"
         /></a>
         <a href="#"> <img src="../img/ig-icon.svg" alt="instagram icon" /></a>
       </div>
