--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../img/favicon.svg" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Delivery - on your way</title>
   </head>
   <body>
@@ -165,11 +165,11 @@
         </ul>
       </div>
       <div>
-        <a href="#"> <img src="../img/fb-icon.svg" alt="facebook icon" /></a>
+        <a href="#"> <img src="./img/fb-icon.svg" alt="facebook icon" /></a>
         <a href="#">
           <img src="./img/twitter-icon.svg" alt="twitter icon"
         /></a>
-        <a href="#"> <img src="../img/ig-icon.svg" alt="instagram icon" /></a>
+        <a href="#"> <img src="./img/ig-icon.svg" alt="instagram icon" /></a>
       </div>
     </footer>
   </body>
